--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Capsule Lab · 胶囊体验研究所</title>
+    <title>狼人杀 · AI 主持台</title>
     <meta
       name="description"
-      content="以胶囊化界面重塑关键业务触点，遵循 0.5 秒识别原则与高级极简设计标准。"
+      content="10 人局 AI 自动推演主持面板 · 夜幕降临，谁是狼人？"
     />
   </head>
   <body>
